N°2311: Avoid new SSO buttons to flicker on page loading

--- a/css/login.css
+++ b/css/login.css
@@ -174,6 +174,7 @@ a:hover {
 	background-color: #E4E7EB;
 	filter: grayscale(1) opacity(0.8);
 	transition-duration: 750ms;
+	transition-property: filter;
 }
 
 .sso-button:hover {
